# kuro_anime

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
kuro/: _helpers.py  api.py  cli.py  config.py  config_manager.py  doctor.py  exceptions.py  kwik.py  player.py  state.py
kuro/commands/: __init__.py  airing.py  completion.py  detail.py  doctor.py  episodes.py  history.py  init.py  search.py  watch.py
starlight/: api_handlers.py
starlight_cli/: _helpers.py  api.py  cli.py  config.py  kwik.py  player.py  state.py
starlight_cli/commands/: airing.py  detail.py  episodes.py  search.py  watch.py
