[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kuro_anime"
version = "1.5.0"
description = "Terminal-based anime discovery and streaming tool"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "requests>=2.32",
    "beautifulsoup4>=4.13",
    "lxml>=6.0",
    "curl_cffi>=0.15.0",
    "yt-dlp>=2024.0",
    "pycryptodomex>=3.20",
]

[project.scripts]
kuro = "kuro.cli:cli"

[tool.setuptools.packages.find]
include = ["kuro*"]
